Fixed spacing in footer

--- a/styles/06-components/common/components-footer.scss
+++ b/styles/06-components/common/components-footer.scss
@@ -12,6 +12,7 @@
     position: relative;
     justify-content: space-between;
     margin: 0 auto;
+    padding: 0 20px;
 
     @include for-large-desktop-up {
       display: grid;
